--- a/backend/package.json
+++ b/backend/package.json
@@ -5,17 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "dev": "nodemon app.js"
+
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@koa/cors": "^4.0.0",
+    "@types/socket.io-client": "^3.0.0",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.0",
     "koa-router": "^12.0.0",
-    "mongoose": "^7.2.1"
+    "mongoose": "^7.2.1",
+    "nodemon": "^3.1.0",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
