--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.5",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
