--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.15.3",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
+    "lodash": "^4.17.21",
     "re-resizable": "^6.9.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,6 +26,7 @@
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.1",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
