--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js",
     "dev": "nodemon app.js"
-
   },
   "keywords": [],
   "author": "",
@@ -18,6 +17,7 @@
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.0",
     "koa-router": "^12.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^7.2.1",
     "nodemon": "^3.1.0",
     "socket.io": "^4.7.5"
